--- a/README
+++ b/README
@@ -2,6 +2,10 @@
 | online-bitstamp-blockade |
 ----------------------------
 
+
+# bezetting
+https://nl.wikipedia.org/wiki/Bezetting_(militair)
+
 # electronic warfare
 https://en.wikipedia.org/wiki/Electronic_warfare
 
