--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://nl.wikipedia.org/wiki/Bezetting_(militair)
 # electronic warfare
 https://en.wikipedia.org/wiki/Electronic_warfare
 
+# denial ofnservice attack
+https://en.wikipedia.org/wiki/Denial-of-service_attack
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
