--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 | online-bitstamp-blockade |
 ----------------------------
 
+'latency up to minutes'
+
 
 # bezetting
 https://nl.wikipedia.org/wiki/Bezetting_(militair)
