--- a/README
+++ b/README
@@ -11,7 +11,7 @@ https://nl.wikipedia.org/wiki/Bezetting_(militair)
 # electronic warfare
 https://en.wikipedia.org/wiki/Electronic_warfare
 
-# denial ofnservice attack
+# denial of service attack
 https://en.wikipedia.org/wiki/Denial-of-service_attack
 
 # nederland
