--- a/README
+++ b/README
@@ -14,6 +14,12 @@ https://en.wikipedia.org/wiki/Electronic_warfare
 # denial of service attack
 https://en.wikipedia.org/wiki/Denial-of-service_attack
 
+# effenctenbeurs
+https://nl.wikipedia.org/wiki/Effectenbeurs
+
+# bitstamp
+https://en.wikipedia.org/wiki/Bitstamp
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
